2005-08-02 11:45 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridCurveIntersectsFace) also returns the xyz of
	the intersection point.

2005-08-02 11:19 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridSplitFaceAt) exended to allow an interior volume
	face to be split as well as a boundary face.

2005-08-02 09:04 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridFindOtherCellWith3Nodes) added extra test to
	ensure that the face nodes are not repeated.

2005-08-01 16:30 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitFaceAt) takes the three nodes of a
	triangle instead of the boundary face index to allow for extension
	to interior volume faces.

2005-08-01 14:50 Mike Park  <mike.park@nasa.gov>

	* src/gridmath.c (gridTriangularBarycentricCoordinate3D) finds the
	barycentric coordinates of a point in the plane of a triangle.

2005-07-29 11:28 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridCurveIntersectsFace) started blank routine to
	find the curve on the way out of the opposite face orbit of a
	node.

2005-07-29 10:25 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridFaceOppositeCellNode) returns an right handed
	face that pints at a given node of a cell.

2005-07-29 09:41 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridThreadCurveThroughVolume) started.
	* src/gridinsert.c (gridReconstructSplitEdgeRatio) calls
	gridThreadCurveThroughVolume.
	
2005-07-29 09:18 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeIfNear, gridSplitFaceAt, 
	gridSplitCellAt, gridInsertInToGeomEdge, gridInsertInToGeomFace,
	gridInsertInToVolume) changed x, y, z args to xyz array of 3. 
	
2005-07-28 13:48 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridFindEnclosingCell) added a hacked version to
	get started. I will need a more robust version for production.

2005-07-28 11:38 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) addd to start
	code on getting that edge in.
