@@ -50,7 +50,7 @@ Grid *gridRobustProject(Grid *g);
 
 Grid *gridCurveIntersectsFace(Grid *g, int *face_nodes, int parent,
 			      double *tuv0, double *tuv1,
-			      double *tuv, double *xyz);
+			      double *tuv, double *xyz, double *bary);
 
 /* the {optimzation,lapacian}Limits will be set to a default if < 0.0 */ 
 Grid *gridSmooth(Grid *g, double optimizationLimit, double laplacianLimit );
