@@ -1,3 +1,8 @@
+2005-08-02 13:53 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridcad.c (gridCurveIntersectsFace) also returns the 
+	barycentric coordinates of the point intersecting the face.
+
 2005-08-02 11:45 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridcad.c (gridCurveIntersectsFace) also returns the xyz of
